# net

./: .gitignore  Cargo.toml  Makefile  NOTES.md  rustfmt.toml
src/: agent.rs  core.rs  error.rs  lib.rs  main.rs  sync.rs  util.rs
src/agent/: behavior.rs  mod.rs  reqres.rs
tests/: agent.rs
tests/common/: mod.rs
