[package]
name = "stamp-net"
version = "0.1.0"
authors = ["Andrew Danger Lyon <andrew@killtheradio.net>"]
edition = "2021"

[dependencies]
futures = "0.3"
getset = "0.1"
libp2p = { version = "0.53", features = ["dcutr", "dns", "identify", "kad", "macros", "noise", "ping", "relay", "request-response", "tcp", "tokio", "yamux"] }
rasn = "0.11"
serde = "1.0"
serde_derive = "1.0"
stamp-core = { path = "../core" }
thiserror = "1.0"
tokio = { version = "1", features = ["sync"] }
tracing = { version = "0.1", features = ["log"] }

