[package]
name = "stamp-net"
version = "0.1.0"
authors = ["Andrew Danger Lyon <andrew@killtheradio.net>"]
edition = "2021"

[dependencies]
async-trait = "0.1"
chrono = "0.4"
futures = "0.3"
getset = "0.1"
libp2p = { version = "0.53", features = ["cbor", "dcutr", "dns", "identify", "kad", "macros", "noise", "ping", "relay", "request-response", "tcp", "tokio", "yamux"] }
rasn = "0.12"
stamp-core = { path = "../core" }
thiserror = "1.0"
tokio = { version = "1", features = ["macros", "rt", "sync"] }
tracing = { version = "0.1", features = ["log"] }
uuid = { version = "1.6", features = ["v7"] }

[dev-dependencies]
rand = { version = "0.8", features = ["getrandom"] }
rand_chacha = "0.3"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

